--- a/src/index.css
+++ b/src/index.css
@@ -35,8 +35,7 @@
 @import url(./blocks/popup/_type/popup_type_image.css);
 @import url(./blocks/popup/_type/popup_type_confirm.css);
 @import url(./blocks/popup/__container/popup__container.css);
-@import url(./blocks/popup/__container/_type/popup__container_type_user-input.css);
-@import url(./blocks/popup/__container/_type/popup__container_type_confirm.css);
+@import url(blocks/popup/__container/_type/popup__container_type_form.css);
 @import url(./blocks/popup/__close-button/popup__close-button.css);
 @import url(./blocks/popup/__submit-button/popup__submit-button.css);
 @import url(./blocks/popup/__submit-button/_disabled/popup__submit-button_disabled.css);
